--- a/style.css
+++ b/style.css
@@ -4,3 +4,14 @@
     
 }
 
+#upperBox{
+    display:flex;
+    justify-content: space-between;
+}
+
+.scores .names{
+    font-weight: bold;
+    color:orange;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
