--- a/style.css
+++ b/style.css
@@ -15,3 +15,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+#finalWinner{
+    color:orange;
+    font-size: large;
+    font-weight: bold;
+    text-align: center;
+}
+
